src/objects/BMCServiceDesk__BMC_BaseElement__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityType__c</fullName>
        <label>Connectivity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>TokenRing</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContractID__c</fullName>
        <label>Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContractLineType__c</fullName>
        <label>Contract Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other (0)</fullName>
                </value>
                <value>
                    <fullName>Unknown (1)</fullName>
                    <default>true</default>
                    <label>Unknown (1)</label>
                </value>
                <value>
                    <fullName>SLA (100)</fullName>
                </value>
                <value>
                    <fullName>OLA (200)</fullName>
                </value>
                <value>
                    <fullName>UPC (300).</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContractType__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other (0)</fullName>
                </value>
                <value>
                    <fullName>Unknown (1)</fullName>
                    <default>true</default>
                    <label>Unknown (1)</label>
                </value>
                <value>
                    <fullName>SLA (100)</fullName>
                </value>
                <value>
                    <fullName>OLA (200)</fullName>
                </value>
                <value>
                    <fullName>UPC (300)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CoordinateFormat__c</fullName>
        <label>Coordinate Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostDescription__c</fullName>
        <label>Cost Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption1__c</fullName>
        <label>Cost Option1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Adapter</fullName>
                </value>
                <value>
                    <fullName>Installed Server</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Concurrent user</fullName>
                </value>
                <value>
                    <fullName>CPU</fullName>
                </value>
                <value>
                    <fullName>Storage in GB</fullName>
                </value>
                <value>
                    <fullName>Storage in TB</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption2__c</fullName>
        <label>Cost Option2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Cost_Amount__c</fullName>
        <label>Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Cost_Derived_Flag__c</fullName>
        <label>Cost Derived Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>OTH - Any Other Country</fullName>
                </value>
                <value>
                    <fullName>ABW - Aruba</fullName>
                </value>
                <value>
                    <fullName>AFG - Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AGO - Angola</fullName>
                </value>
                <value>
                    <fullName>AIA - Anguilla</fullName>
                </value>
                <value>
                    <fullName>ALA - Aland Islands</fullName>
                </value>
                <value>
                    <fullName>ALB - Albania</fullName>
                </value>
                <value>
                    <fullName>AND - Andorra</fullName>
                </value>
                <value>
                    <fullName>ANT - Netherlands Antilles</fullName>
                </value>
                <value>
                    <fullName>ARE - United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>ARG - Argentina</fullName>
                </value>
                <value>
                    <fullName>ARM - Armenia</fullName>
                </value>
                <value>
                    <fullName>ASM - American Samoa</fullName>
                </value>
                <value>
                    <fullName>ATA - Antarctica</fullName>
                </value>
                <value>
                    <fullName>ATF - French Southern Territories</fullName>
                </value>
                <value>
                    <fullName>ATG - Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>AUS - Australia</fullName>
                </value>
                <value>
                    <fullName>AUT - Austria</fullName>
                </value>
                <value>
                    <fullName>AZE - Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>BDI - Burundi</fullName>
                </value>
                <value>
                    <fullName>BEL - Belgium</fullName>
                </value>
                <value>
                    <fullName>BEN - Benin</fullName>
                </value>
                <value>
                    <fullName>BFA - Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>BGD - Bangladesh</fullName>
                </value>
                <value>
                    <fullName>BGR - Bulgaria</fullName>
                </value>
                <value>
                    <fullName>BHR - Bahrain</fullName>
                </value>
                <value>
                    <fullName>BHS - Bahamas</fullName>
                </value>
                <value>
                    <fullName>BIH - Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>BLR - Belarus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Country__c</fullName>
        <label>Country</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Currently_Consumed_Resource__c</fullName>
        <label>Currently Consumed Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DHCPUse__c</fullName>
        <label>DHCP Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DNSHostName__c</fullName>
        <label>DNS Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSDirectoryServiceFlag__c</fullName>
        <label>DS Directory Service Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSDnsControllerFlag__c</fullName>
        <label>DS DNS Controller Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSDnsDomainFlag__c</fullName>
        <label>DS DNS Domain Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSDnsForestFlag__c</fullName>
        <label>DS DNS Forest Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSGlobalCatalogFlag__c</fullName>
        <label>DS Global Catalog Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSKerberosDistributionCenterFlag__c</fullName>
        <label>DS Kerberos Distribution Center Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSPrimaryDomainControllerFlag__c</fullName>
        <label>DS Primary Domain Controller Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSTimeServiceFlag__c</fullName>
        <label>DS Time Service Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSWritableFlag__c</fullName>
        <label>DS Writable Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DataRate__c</fullName>
        <label>Data Rate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DatasetId__c</fullName>
        <label>DatasetId</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DcSiteName__c</fullName>
        <label>DC Site Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DefaultBlockSize__c</fullName>
        <label>Default Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DeleteStatusCode__c</fullName>
        <label>Delete Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <inlineHelpText>Use this field to enter a description of the instance.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Device_Interface__c</fullName>
        <label>Device Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Serial</fullName>
                </value>
                <value>
                    <fullName>PS/2</fullName>
                </value>
                <value>
                    <fullName>Infrared</fullName>
                </value>
                <value>
                    <fullName>HP-HIL</fullName>
                </value>
                <value>
                    <fullName>Bus mouse</fullName>
                </value>
                <value>
                    <fullName>ADB (Apple Desktop Bus)</fullName>
                </value>
                <value>
                    <fullName>Bus mouse DB-9</fullName>
                </value>
                <value>
                    <fullName>Bus mouse micro-DIN</fullName>
                </value>
                <value>
                    <fullName>USB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Display_Type__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiscan Color</fullName>
                </value>
                <value>
                    <fullName>Multiscan Monochrome</fullName>
                </value>
                <value>
                    <fullName>Fixed Frequency Color</fullName>
                </value>
                <value>
                    <fullName>Fixed Frequency Monochrome</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DnsForestName__c</fullName>
        <label>DNS Forest Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentDate__c</fullName>
        <label>Document Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentSize__c</fullName>
        <label>Document Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentStatus__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pre-Released</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentType__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainControllerAddressType__c</fullName>
        <label>Domain Controller Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>DS_INET_ADDRESS</fullName>
                </value>
                <value>
                    <fullName>DS_NETBIOS_ADDRESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainControllerAddress__c</fullName>
        <label>Domain Controller Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainControllerName__c</fullName>
        <label>Domain Controller Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainGuid__c</fullName>
        <label>Domain GUID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainName__c</fullName>
        <label>Domain Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainType__c</fullName>
        <label>Domain Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>J2EE Domain</fullName>
                </value>
                <value>
                    <fullName>NT Domain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DriveSCSITargetID__c</fullName>
        <label>Drive SCSI Target ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DriveSize__c</fullName>
        <label>Drive Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DriverInterfaceType__c</fullName>
        <label>Driver Interface Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Enabler_Type__c</fullName>
        <label>Enabler Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PR/SM</fullName>
                </value>
                <value>
                    <fullName>z/VM</fullName>
                </value>
                <value>
                    <fullName>VMware Server</fullName>
                </value>
                <value>
                    <fullName>Solaris Resource Manager</fullName>
                </value>
                <value>
                    <fullName>LPAR; VPar; HP nPartitions</fullName>
                </value>
                <value>
                    <fullName>Integrity VM</fullName>
                </value>
                <value>
                    <fullName>Microsoft Hyper-V</fullName>
                </value>
                <value>
                    <fullName>VMware ESX Server</fullName>
                </value>
                <value>
                    <fullName>VMware Workstation</fullName>
                </value>
                <value>
                    <fullName>Xen Hypervisor</fullName>
                </value>
                <value>
                    <fullName>LDOM Hypervisor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnvironmentSpecification__c</fullName>
        <label>Environment Specification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ExpansionInterface__c</fullName>
        <label>Expansion Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Expansion__c</fullName>
        <label>Expansion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Exploration_Date__c</fullName>
        <label>Exploration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to tag a record for exporting from RF Config Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF Config Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAssetRuleClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule Asset Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>Base Elements (Rule Asset Class)</relationshipLabel>
        <relationshipName>Base_Elements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Service of</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Business Services</relationshipLabel>
        <relationshipName>Business_ServicesBE1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContentImport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field forms a relationship between the Content Import object and the records imported in the Base Element, Request Definition, Template, Category, and Agreement objects. This field helps in tracking the imported record in the respective objects.</description>
        <label>Content Import</label>
        <referenceTo>BMCServiceDesk__ContentImport__c</referenceTo>
        <relationshipLabel>Base Elements</relationshipLabel>
        <relationshipName>Base_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores location of the instance</description>
        <inlineHelpText>Stores location of the instance</inlineHelpText>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__Class__c</field>
                <operation>equals</operation>
                <value>BMC_PhysicalLocation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Base Elements (Location)</relationshipLabel>
        <relationshipName>FKBase_Elements_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKModel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores model of the instance</description>
        <inlineHelpText>Select the model of the instance.</inlineHelpText>
        <label>Model Name</label>
        <referenceTo>BMCServiceDesk__Model__c</referenceTo>
        <relationshipLabel>Base Elements (Model)</relationshipLabel>
        <relationshipName>Base_Elements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FailedAutomaticIdentification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FailedAutomaticIdentification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FaxNumber__c</fullName>
        <label>Fax Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Fax__c</fullName>
        <label>Fax</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__File_System_Size__c</fullName>
        <label>File System Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__File_System_Type__c</fullName>
        <label>File System Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FirmwareVersion__c</fullName>
        <label>Firmware Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Fixed__c</fullName>
        <label>Fixed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FlashMemory__c</fullName>
        <label>Flash Memory</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>